Adding deathmatch mode

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="container">
         <h2 class="header-main text-center">
-            Welcome to the game 
+            Welcome to the "deathmatch" mode. <br> 
+            Game ends when there are no more lives to spare!  
         </h2>
         <h3 class="header-categories text-center">
             <span class="label label-default">Rock</span>
@@ -69,7 +70,7 @@
                 <span id="js-playerPoints" class="badge">
                     0
                 </span>
-                <span id="js-playerName">
+                <span id="js-playerName" class="badge">
                     Player name
                 </span>                
             </div>
@@ -80,7 +81,9 @@
                 <span id="js-computerPoints" class="badge">
                     0
                 </span>
-                Computer                
+                <span id="js-computerName" class="badge">
+                    Computer
+                </span>                
             </div>
         </div>
             <div class="row">
@@ -100,14 +103,14 @@
             <div class="row">
                 <div class="col-xs-5 text-center">
                     <span id="js-playerResult">
-                        Player Score
+                        Player score
                     </span>
                 </div>
                 <div class="col-xs-2">
                 </div>
-                <div class="col-xs text-center">
+                <div class="col-xs-5 text-center">
                     <span id="js-computerResult">
-                        Computer Score
+                        Computer score
                     </span>
                 </div>
             </div>
